--- a/index.html
+++ b/index.html
@@ -16,24 +16,25 @@
     <title>Mis Notas - Desafío CRUD</title>
   </head>
   <body>
-    <div class="container">
-      <form>
-        <div class="form-group mt-4">
-          <label for="exampleFormControlInput1">Título Nota</label>
+    <!-- Formulario de ingreso -->
+    <div class="card m-auto p-3 mt-4 bg-light" style="max-width: 600px">
+      <form id="formulario">
+        <div class="form-group">
+          <label for="inputTitulo">Título Nota</label>
           <input
             type="text"
             class="form-control"
-            id=""
+            id="inputTitulo"
             placeholder="Ingrese su Título"
             required
             maxlength="60"
           />
         </div>
         <div class="form-group mt-4">
-          <label for="exampleFormControlTextarea1">Nota</label>
+          <label for="inputNota">Nota</label>
           <textarea
             class="form-control"
-            id=""
+            id="inputNota"
             rows="3"
             placeholder="Ingrese su Nota"
             required
@@ -42,6 +43,21 @@
         </div>
         <button type="submit" class="btn btn-primary mt-3">ENVIAR</button>
       </form>
+    </div>
+
+    <!-- Tabla que muestra las notas -->
+
+    <div class="container">
+      <table class="table table-bordered mt-5">
+        <thead>
+          <tr>
+            <th scope="col">ID</th>
+            <th scope="col">Título</th>
+            <th scope="col">Nota</th>
+          </tr>
+        </thead>
+        <tbody id="tabla"></tbody>
+      </table>
     </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
@@ -58,5 +74,6 @@
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.6.0/dist/umd/popper.min.js" integrity="sha384-KsvD1yqQ1/1+IA7gi3P0tyJcT3vR+NdBTt13hSJ2lnve8agRGXTTyNaBYmCR/Nwi" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.min.js" integrity="sha384-nsg8ua9HAw1y0W1btsyWgBklPnCUAFLuTMS2G72MMONqmOymq585AcH49TLBQObG" crossorigin="anonymous"></script>
     -->
+    <script src="./index.js"></script>
   </body>
 </html>
