se agrega funcion eliminar

--- a/index.html
+++ b/index.html
@@ -51,12 +51,23 @@
       <table class="table table-bordered mt-5">
         <thead>
           <tr>
-            <th scope="col">ID</th>
             <th scope="col">Título</th>
             <th scope="col">Nota</th>
+            <th scope="col">Acciones</th>
           </tr>
         </thead>
         <tbody id="tabla"></tbody>
+        <!-- <tr>
+          <td>Titulos</td>
+          <td>Notas</td>
+          <td>
+            <button type="button" class="btn btn-primary btn-sm" data-bs-toggle="modal"
+              data-bs-target="#modalDetalle">Ver detalle</button>
+            <button type="button" class="btn btn-success btn-sm" data-bs-toggle="modal"
+              data-bs-target="#modalEditar">Editar</button>
+            <button onclick="eliminarUsuario()" class="btn btn-danger btn-sm">Eliminar</button>
+          </td>
+        </tr> -->
       </table>
     </div>
 
