busqueda de notas

--- a/index.html
+++ b/index.html
@@ -45,6 +45,17 @@
       </form>
     </div>
 
+    <!-- Búsqueda Nota -->
+    <div class="mt-5 mb-3 misnotas-div">
+      <form class="mx-3" id="formBusqueda">
+          <label class="fw-bold busqueda-label" for="busqueda">Búsqueda de Nota</label>
+          <input class="mx-3 busqueda-input" id="busqueda" type="text">
+          <button class="btn btn-dark boton-busqueda" type="submit">Buscar</button>
+          <button class="btn btn-secondary mx-2 boton-limpiar" type="button"
+              onclick="limpiarFiltro()">Limpiar</button>
+      </form>
+  </div>
+
     <!-- Tabla que muestra las notas -->
 
     <div class="container">
